# rust-price-tracker-v2

./: Cargo.toml  README.md  build.rs
protobuf/: requests.proto  results.proto
src/: errors.rs  main.rs  postal.rs  pubsub.rs  scraping.rs  scraping_traits.rs  services.rs  sources.rs
src/sources/: amzn_source.rs  test_source.rs
