[package]
name = "rust-price-tracker-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.71"
base64 = "0.21.2"
prost = "0.11.9"
prost-types = "0.11.9"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = "1.29.1"

[build-dependencies]
prost-build = "0.11.9"
